Compressed all images to webp format

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="../src/images/bad-logo.png" />
+    <link rel="icon" href="../src/images/bad-logo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="#BeatTheAlgorithm - Social media survivor challenge"
       content="Challenge yourself to a month without social media. Re-evaluate your relationship with social media. Who is winning, you or the algorithms?"
     />
-    <link rel="apple-touch-icon" href="../src/images/bad-logo.png" />
+    <link rel="apple-touch-icon" href="../src/images/bad-logo.webp" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
