Wrote the README with some additions to Home, About and index as well

--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="#BeatTheAlgorithm - Social media survivor challenge"
+      name="description"
       content="Challenge yourself to a month without social media. Re-evaluate your relationship with social media. Who is winning, you or the algorithms?"
     />
+    <meta name="keywords" content="social media, social, media, algorithm, addiction, campaign, website">
+    <meta name="author" content="Miro Keimiöniemi">
+
     <link rel="apple-touch-icon" href="../src/images/bad-logo.webp" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>#BeatTheAlgorithm - Campaign</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
